fetch: modify experienceView

--- a/Mini_Project_2/portfolio/package.json
+++ b/Mini_Project_2/portfolio/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^4.1.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
+    "vue-easy-lightbox": "^1.19.0",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
