--- a/BE-Laravel/FE-Review-Film/package.json
+++ b/BE-Laravel/FE-Review-Film/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
     "daisyui": "^4.12.10",
-    "tailwindcss": "^3.4.6",
     "vue": "^3.4.29",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.6",
     "vite": "^5.3.1"
   }
 }
