--- a/BE-Laravel/FE-Review-Film/package.json
+++ b/BE-Laravel/FE-Review-Film/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
     "daisyui": "^4.12.10",
+    "swiper": "^6.8.4",
     "vue": "^3.4.29",
     "vue-router": "^4.0.13"
   },
