--- a/BE-Laravel/FE-Review-Film/package.json
+++ b/BE-Laravel/FE-Review-Film/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
+    "axios": "^1.7.2",
     "daisyui": "^4.12.10",
     "swiper": "^6.8.4",
     "vue": "^3.4.29",
